K1J-1971: Add Spotless code formatter and reformat project (#1300)